# magnus

./: .gitignore  .gitmodules  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  Justfile  README.md  deny.toml  docker-bake-profiling.hcl  docker-bake.hcl  flake.nix  magnus.nu  typos.toml
apps/node/: Cargo.toml
apps/node/src/: defaults.rs  magnus_cmd.rs  main.rs
crates/consensus/dkg/: Cargo.toml
crates/e2e/: Cargo.toml  README.md
crates/e2e/src/: harness.rs  lib.rs  node.rs  setup.rs
crates/e2e/src/tests/: resilience.rs
crates/evm/evm/: Cargo.toml
crates/evm/evm/src/: assemble.rs  block.rs  context.rs  engine.rs  error.rs  evm.rs  lib.rs  test_utils.rs
crates/evm/precompiles/: Cargo.toml
crates/evm/precompiles/benches/: magnus_precompiles.rs
crates/evm/precompiles/src/: error.rs  lib.rs  test_util.rs
crates/evm/precompiles/src/account_keychain/: dispatch.rs  mod.rs
crates/evm/precompiles/src/address_registry/: dispatch.rs  mod.rs
crates/evm/precompiles/src/mip20/: dispatch.rs  mod.rs  rewards.rs  roles.rs
crates/evm/precompiles/src/mip20_factory/: dispatch.rs  mod.rs
crates/evm/precompiles/src/mip20_issuer_registry/: dispatch.rs  mod.rs
crates/evm/precompiles/src/mip403_registry/: dispatch.rs  mod.rs
crates/evm/precompiles/src/mip_fee_manager/: amm.rs  currency_registry.rs  dispatch.rs  escrow.rs  mod.rs  router_registry.rs
crates/evm/precompiles/src/nonce/: dispatch.rs  mod.rs
crates/evm/precompiles/src/signature_verifier/: dispatch.rs  mod.rs
crates/evm/precompiles/src/stablecoin_dex/: dispatch.rs  mod.rs  order.rs  orderbook.rs
crates/evm/precompiles/src/storage/: evm.rs  hashmap.rs  mod.rs  thread_local.rs
crates/evm/precompiles/src/tip20/: dispatch.rs  mod.rs  rewards.rs  roles.rs
crates/evm/precompiles/src/tip20_factory/: dispatch.rs  mod.rs
crates/evm/precompiles/src/tip403_registry/: dispatch.rs  mod.rs
crates/evm/precompiles/src/tip_fee_manager/: amm.rs  dispatch.rs  mod.rs
crates/evm/precompiles/src/validator_config/: dispatch.rs  mod.rs
crates/evm/precompiles/src/validator_config_v2/: dispatch.rs  mod.rs
crates/evm/precompiles/tests/: storage.rs
crates/evm/precompiles/tests/storage_tests/: arrays.rs  layouts.rs  mappings.rs  mod.rs  packing.rs  sets.rs  strings.rs  structs.rs
crates/evm/revm/: Cargo.toml
crates/evm/revm/src/: block.rs  common.rs  error.rs  evm.rs  exec.rs  gas_params.rs  handler.rs  instructions.rs  lib.rs  tx.rs
crates/execution/evm/: Cargo.toml
crates/execution/evm/src/: assemble.rs  block.rs  context.rs  engine.rs  error.rs  evm.rs  lib.rs  test_utils.rs
crates/execution/vm/: Cargo.toml
crates/execution/vm/src/: block.rs  common.rs  error.rs  evm.rs  exec.rs  handler.rs  instructions.rs  lib.rs  tx.rs
crates/network/transport-sim/: Cargo.toml  README.md
crates/network/transport-sim/src/: lib.rs  provider.rs
crates/node/builder/: Cargo.toml  README.md
crates/node/builder/src/: builder.rs  engine.rs  lib.rs  node.rs  traits.rs
crates/node/builder/src/rpc/: admin.rs  error.rs  mod.rs
crates/node/config/: Cargo.toml  README.md
crates/node/config/src/: error.rs  lib.rs  node.rs  tests.rs
crates/node/consensus/: Cargo.toml  README.md
crates/node/consensus/src/: application.rs  error.rs  execution.rs  ledger.rs  lib.rs  proposal.rs  traits.rs
crates/node/consensus/src/components/: mempool.rs  snapshot.rs
crates/node/executor/: Cargo.toml  README.md
crates/node/executor/src/: adapter.rs  error.rs  fee_handler.rs  lib.rs  outcome.rs  revm.rs  traits.rs  tx_types.rs  validation.rs
crates/node/executor/tests/: executor.rs  fee_flow.rs
crates/node/ledger/: Cargo.toml  README.md
crates/node/ledger/src/: lib.rs
crates/node/mempool/: Cargo.toml
crates/node/mempool/src/: amm.rs  best.rs  lib.rs  magnus_pool.rs  maintain.rs  test_utils.rs  transaction.rs  tt_2d_pool.rs  validator.rs
crates/node/payload/: Cargo.toml
crates/node/payload/src/: attrs.rs  lib.rs  metrics.rs
crates/node/precompiles/: Cargo.toml
crates/node/precompiles/src/: error.rs  fee_amm.rs  fee_manager.rs  iso20022.rs  lib.rs  mip20.rs  mip20_factory.rs  mip403_registry.rs  oracle_registry.rs  registry.rs  storage.rs
crates/node/precompiles/src/iso20022/: messages.rs  mod.rs
crates/node/precompiles/src/mip20/: mod.rs  roles.rs
crates/node/precompiles/src/oracle_registry/: mod.rs  sorted_list.rs
crates/node/precompiles/src/storage/: mapping.rs  mod.rs
crates/node/reporters/: Cargo.toml  README.md
crates/node/reporters/src/: lib.rs
crates/node/runner/: Cargo.toml  README.md
crates/node/runner/src/: app.rs  lib.rs  runner.rs  scheme.rs
crates/node/service/: Cargo.toml  README.md
crates/node/service/src/: lib.rs  runner.rs  service.rs  transport_provider.rs
crates/precompile/registry/: Cargo.toml
crates/precompile/registry/src/: error.rs  lib.rs  test_util.rs
crates/precompile/registry/src/account_keychain/: dispatch.rs  mod.rs
crates/precompile/registry/src/mip20/: mod.rs  (+3 more)
crates/primitives/alloy/: CHANGELOG.md  Cargo.toml  README.md
crates/primitives/alloy/examples/: README.md  batch_payments.rs  burn_tokens.rs  configure_provider.rs  get_balance.rs  get_block_number.rs  mint_fee_liquidity.rs  mint_tokens.rs  transfer.rs  transfer_with_memo.rs  watch_transfers.rs  watch_transfers_with_memo.rs
crates/primitives/alloy/src/: lib.rs  network.rs
crates/storage/backend/: Cargo.toml  README.md
crates/storage/backend/src/: accounts.rs  backend.rs  code.rs  lib.rs  storage.rs  types.rs
crates/storage/handlers/: Cargo.toml  README.md
crates/storage/handlers/src/: adapter.rs  error.rs  lib.rs  qmdb.rs  state.rs
crates/storage/qmdb-ledger/: Cargo.toml  README.md
crates/storage/qmdb-ledger/src/: ledger.rs  lib.rs
crates/storage/traits/: Cargo.toml  README.md
crates/storage/traits/src/: lib.rs  state.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: genesis_args.rs  get_dkg_outcome.rs  main.rs
xtask/: Cargo.toml  README.md
xtask/src/: generate_localnet.rs  generate_state_bloat.rs  genesis_args.rs  get_dkg_outcome.rs  main.rs
(+644 files in other folders)
