[workspace]
resolver = "2"
members = [
    # Apps
    "apps/node",
    "apps/sidecar",
    "apps/bench",

    # Core
    "crates/core/primitives",
    "crates/core/chainspec",
    "crates/core/error",

    # Consensus
    "crates/consensus/engine",
    "crates/consensus/consensus-engine",
    "crates/consensus/dkg",
    "crates/consensus/dkg-onchain-artifacts",

    # Execution
    "crates/execution/evm",
    "crates/execution/vm",

    # Payload
    "crates/node/payload-types",

    # Precompile
    "crates/precompile/registry",
    "crates/precompile/macros",
    "crates/precompile/contracts",

    # Node
    "crates/node/builder",
    "crates/node/config",
    "crates/node/consensus-engine-config",
    "crates/node/payload",
    "crates/node/mempool",

    # SDK
    "crates/sdk/provider",

    # Telemetry
    "crates/telemetry/util",

    # Tools
    "tools/xtask",
    "tools/faucet",

    # E2E Tests
    "e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/magnus-chain/magnus"
homepage = "https://magnus.network"
keywords = ["blockchain", "evm", "stablecoin", "payments", "vietnam"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# ========================================
# Magnus Internal Crates
# ========================================

# Core
magnus-primitives = { path = "crates/core/primitives", default-features = false, features = ["reth"] }
magnus-chainspec = { path = "crates/core/chainspec", default-features = false }
magnus-eyre = { path = "crates/core/error", default-features = false }

# Consensus
magnus-consensus = { path = "crates/consensus/engine", default-features = false }
magnus-consensus-engine = { path = "crates/consensus/consensus-engine" }
magnus-dkg = { path = "crates/consensus/dkg" }
magnus-dkg-onchain-artifacts = { path = "crates/consensus/dkg-onchain-artifacts" }

# Execution
magnus-evm = { path = "crates/execution/evm", default-features = false }
magnus-vm = { path = "crates/execution/vm", default-features = false }

# Payload
magnus-payload = { path = "crates/node/payload", default-features = false }
magnus-payload-types = { path = "crates/node/payload-types", default-features = false }

# Mempool (Transaction Pool)
magnus-mempool = { path = "crates/node/mempool", default-features = false }

# Precompile
magnus-precompile-registry = { path = "crates/precompile/registry", default-features = false }
magnus-precompile-macros = { path = "crates/precompile/macros" }
magnus-contracts = { path = "crates/precompile/contracts", default-features = false }

# Node
magnus-node = { path = "crates/node/builder", default-features = false }
magnus-config = { path = "crates/node/config", default-features = false }
magnus-consensus-engine-config = { path = "crates/node/consensus-engine-config" }

# SDK
magnus-provider = { path = "crates/sdk/provider" }

# Telemetry
magnus-telemetry-util = { path = "crates/telemetry/util" }

# Tools
magnus-faucet = { path = "tools/faucet", default-features = false }
magnus-xtask = { path = "tools/xtask" }

# E2E
magnus-e2e = { path = "e2e" }

# ========================================
# Reth (Ethereum Node Framework)
# ========================================
# Pointing to branch `reth/rc.2-cc`
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553", features = ["std", "optional-checks"] }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }

# ========================================
# REVM (Rust EVM)
# ========================================
revm = { version = "33.1.0", features = ["optional_fee_charge"] }

# ========================================
# Alloy (Ethereum Core Libraries)
# ========================================
alloy = { version = "1.1.3", default-features = false }
alloy-consensus = { version = "1.1.3", default-features = false }
alloy-contract = { version = "1.1.3", default-features = false }
alloy-eips = { version = "1.1.3", default-features = false }
alloy-evm = "0.25.2"
alloy-genesis = "1.1.3"
alloy-hardforks = "0.4.5"
alloy-network = { version = "1.1.3", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }
alloy-provider = { version = "1.1.3", default-features = false }
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.1.3"
alloy-rpc-types-eth = { version = "1.1.3" }
alloy-serde = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = "1.1.3"
alloy-sol-types = "1.5.0"
alloy-transport = "1.1.3"

# ========================================
# Commonware Libraries
# ========================================
# Commonware main right after https://github.com/commonwarexyz/monorepo/pull/2740 was merged
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-math = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-parallel = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", rev = "5ca1fb0bba4f2f04bf27d1da2b68ef034dca93be" }

# ========================================
# Async Runtime & Concurrency
# ========================================
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
futures = "0.3.31"
async-trait = "0.1"
async-lock = "3.4.1"
rayon = "1.10"

# ========================================
# Serialization
# ========================================
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# ========================================
# Error Handling
# ========================================
thiserror = "2.0.14"
eyre = "0.6.12"

# ========================================
# Logging & Tracing
# ========================================
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# ========================================
# Cryptography
# ========================================
sha2 = "0.10"
rand = "0.8.5"
rand_core = "0.6.4"
secp256k1 = "0.30.0"
p256 = "0.13"

# ========================================
# Networking
# ========================================
axum = "0.8.4"
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }

# ========================================
# CLI
# ========================================
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.18"

# ========================================
# Utilities
# ========================================
bytes = "1.8"
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
parking_lot = "0.12.4"
indexmap = "2.11.0"
itertools = "0.14.0"
auto_impl = "1"
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1.0"
tempfile = "3.20.0"
base64 = "0.22"
jiff = { version = "0.2.15", default-features = false }
schnellru = "0.2"
governor = "0.10.2"
metrics = "0.24.0"
prometheus-client = "0.24.0"
modular-bitfield = "0.11.2"

# ========================================
# Build Dependencies
# ========================================
vergen = "9"
vergen-git2 = "1"

# ========================================
# Testing
# ========================================
criterion = "0.7.0"
test-case = "3"

# ========================================
# Profiling
# ========================================
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
