[workspace]
members = ["bin/*", "crates/e2e", "crates/network/*", "crates/node/*", "crates/storage/*", "crates/utilities/*"]
default-members = ["bin/magnus"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/refcell/magnus"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = "warn"
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = "symbols"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Local crates
magnus-builder = { path = "crates/node/builder" }
magnus-domain = { path = "crates/node/domain" }
magnus-cli = { path = "crates/utilities/cli" }
magnus-crypto = { path = "crates/utilities/crypto" }
magnus-backend = { path = "crates/storage/backend" }
magnus-config = { path = "crates/node/config" }
magnus-consensus = { path = "crates/node/consensus" }
magnus-executor = { path = "crates/node/executor" }
magnus-ledger = { path = "crates/node/ledger" }
magnus-marshal = { path = "crates/network/marshal" }
magnus-reporters = { path = "crates/node/reporters" }
magnus-service = { path = "crates/node/service" }
magnus-simplex = { path = "crates/node/simplex" }
magnus-transport = { path = "crates/network/transport" }
magnus-transport-sim = { path = "crates/network/transport-sim" }
magnus-sys = { path = "crates/utilities/sys" }
magnus-handlers = { path = "crates/storage/handlers" }
magnus-overlay = { path = "crates/storage/overlay" }
magnus-qmdb = { path = "crates/storage/qmdb" }
magnus-qmdb-ledger = { path = "crates/storage/qmdb-ledger" }
magnus-traits = { path = "crates/storage/traits" }
magnus-indexer = { path = "crates/storage/indexer" }
magnus-dkg = { path = "crates/node/dkg" }
magnus-runner = { path = "crates/node/runner" }
magnus-rpc = { path = "crates/node/rpc" }
magnus-txpool = { path = "crates/node/txpool" }
magnus-precompiles = { path = "crates/node/precompiles" }
magnus-e2e = { path = "crates/e2e" }

commonware-p2p = "0.0.65"
commonware-utils = "0.0.65"
commonware-codec = "0.0.65"
commonware-stream = "0.0.65"
commonware-macros = "0.0.65"
commonware-storage = "0.0.65"
commonware-runtime = "0.0.65"
commonware-resolver = "0.0.65"
commonware-parallel = "0.0.65"
commonware-broadcast = "0.0.65"
commonware-consensus = "0.0.65"
commonware-cryptography = "0.0.65"

# Alloy
alloy-primitives = "1.0"
alloy-consensus = { version = "1.0", features = ["k256"] }
alloy-eips = "1.0"
alloy-rlp = "0.3"
alloy-sol-types = "1.0"

# Execution
revm = { version = "34.0.0", default-features = false }
alloy-evm = { version = "0.27.0", default-features = false }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
eyre = "0.6"

# Concurrency
parking_lot = "0.12"

# Misc
async-trait = "0.1"
anyhow = "1.0.100"
libc = "0.2"
rand = "0.8"
rand_core = "0.6"
governor = "0.10.4"
prometheus-client = "0.24.0"
bytes = "1"
hex = "0.4"
hex-literal = "0.4"
k256 = "0.13"
sha3 = "0.10"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Testing
rstest = "0.24"
tempfile = "3"
