[package]
name = "magnus-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-chainspec.workspace = true
magnus-contracts.workspace = true
magnus-primitives.workspace = true
magnus-commonware-node-config.workspace = true
magnus-validator-config.workspace = true
magnus-dkg-onchain-artifacts.workspace = true
magnus-evm.workspace = true
magnus-precompiles.workspace = true
magnus-revm.workspace = true

alloy = { workspace = true, features = [
  "genesis",
  "providers",
  "reqwest",
  "reqwest-rustls-tls",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "rand",
  "sol-types",
  "getrandom",
] }
alloy-primitives = { workspace = true, features = ["asm-keccak"] }
coins-bip32.workspace = true
clap = { workspace = true, features = ["derive"] }
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-math.workspace = true
commonware-utils.workspace = true
const-hex.workspace = true
eyre.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
rand_08.workspace = true
rayon.workspace = true
reth-evm.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
