[package]
name = "magnus-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "End-to-end tests for Magnus consensus network"

[lints]
workspace = true

[dependencies]
# Local crates
magnus-consensus.workspace = true
magnus-crypto = { workspace = true, features = ["test-utils"] }
magnus-domain = { workspace = true, features = ["evm"] }
magnus-executor.workspace = true
magnus-ledger.workspace = true
magnus-marshal.workspace = true
magnus-overlay.workspace = true
magnus-qmdb-ledger.workspace = true
magnus-reporters.workspace = true
magnus-simplex.workspace = true
magnus-transport-sim.workspace = true

# Commonware
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Async
futures.workspace = true
tokio = { workspace = true, features = ["time"] }

# Misc
rand.workspace = true

# Crypto
k256.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
