[package]
name = "magnus-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-chainspec.workspace = true
magnus-consensus-engine-config.workspace = true
magnus-contracts.workspace = true
magnus-config.workspace = true
magnus-dkg.workspace = true
magnus-dkg-onchain-artifacts.workspace = true
magnus-evm.workspace = true
magnus-precompile-registry.workspace = true
magnus-vm.workspace = true

alloy = { workspace = true, features = [
  "genesis",
  "providers",
  "reqwest",
  "reqwest-rustls-tls",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "rand",
  "sol-types",
  "getrandom",
] }
alloy-primitives.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
magnus-codec.workspace = true
magnus-bft.workspace = true
magnus-cryptography.workspace = true
magnus-math.workspace = true
magnus-utils.workspace = true
const-hex.workspace = true
eyre.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
reth-evm.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
