[package]
name = "magnus-dkg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
magnus-codec.workspace = true
magnus-bft.workspace = true
magnus-cryptography.workspace = true
magnus-utils.workspace = true
modular-bitfield = { version = "0.11.2", optional = true }

[dev-dependencies]
magnus-math.workspace = true
rand.workspace = true

[lints]
workspace = true
